# scrooge-bank-api

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  WITHDRAWALS_IMPLEMENTATION_CHECKLIST.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: .gitkeep  ac1ca58386eb_initial_schema_without_checking_balance_.py
app/: __init__.py  config.py  exceptions.py  utils.py
app/api/: __init__.py  schema_bridge.py  schemas.py
app/api/schemas/: __init__.py  admin.py  filters.py  lists.py  requests.py  responses.py
app/api/v1/: __init__.py  accounts.py  admin.py  auth.py  customers.py  loans.py  transactions.py
app/middleware/: __init__.py  error_handlers.py
app/models/: __init__.py  account.py  base.py  customer.py  loan_application.py  transaction.py  user.py
app/schemas/: __init__.py  account.py  auth.py  customer.py  loan.py  transaction.py
app/services/: __init__.py  account_service.py  auth_service.py  bank_service.py  customer_service.py  loan_service.py  transaction_service.py
scripts/: init-db.sql  seed_data.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_bank_operator_flow.py  test_checking_account_flow.py  test_loan_account_flow.py  test_single_account_rule.py
tests/integration/: __init__.py  test_account_authorization.py  test_account_close_endpoint.py  test_account_lifecycle.py  test_account_list_endpoint.py  test_account_single_account_rule.py  test_admin_bank_endpoints.py  test_bank_service.py  test_deposits.py  test_loan_account_single_rule.py  test_loan_payments.py  test_loan_service_bank_integration.py  test_withdrawals.py
tests/unit/: __init__.py
tests/unit/services/: __init__.py
